syntax = "proto3";
package kk_schedule;

option go_package = "/kk_schedule";


message PBRegisterJob {
  string Description = 1;
  // ServiceName + FuncName must be unique
  string ServiceName = 2;
  string FuncName = 3;
}

message PBRegisterService {
  // Eg 127.0.0.1:8081
  string Target = 1;
  // ServiceName must be unique
  string ServiceName = 2;
  // Authentication token for the service
  string AuthToken = 3;
}